--- a/client/src/components/Button/Button.module.css
+++ b/client/src/components/Button/Button.module.css
@@ -1,7 +1,9 @@
 .button {
-  padding: 10px 16px;
-  background: transparent;
-  border: 1px solid #000;
+  padding: 8px 20px;
+  background: var(--secondary);
+  color: var(--font);
+  font-weight: 700;
+  border: none;
   outline: none;
   border-radius: 5px;
   cursor: pointer;
@@ -9,5 +11,5 @@
 }
 
 .button:hover {
-  opacity: 0.7;
+  opacity: 0.8;
 }
