--- a/client/src/components/Toast/Toast.module.css
+++ b/client/src/components/Toast/Toast.module.css
@@ -44,3 +44,18 @@
   justify-content: center;
   align-items: center;
 }
+
+.toastClose {
+  background: transparent;
+  border: none;
+  outline: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+}
+
+.toastCloseIcon {
+  font-size: 21px;
+  color: var(--font);
+}
