--- a/client/src/assets/styles/common.css
+++ b/client/src/assets/styles/common.css
@@ -14,6 +14,13 @@
   --font: #fff;
 }
 
+.container {
+  max-width: 1300px;
+  width: 100%;
+  margin: 0 auto;
+  padding: 0 10px;
+}
+
 body {
   background: var(--main);
   color: var(--font);
