--- a/client/src/components/Messages/Messages.module.css
+++ b/client/src/components/Messages/Messages.module.css
@@ -1,12 +1,12 @@
 .messages {
   background: #fff;
-  width: 74vw;
+  width: 74%;
   height: 100%;
   color: var(--main);
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  padding: 0 25px;
+  padding: 0 4px;
 }
 
 .header {
@@ -15,6 +15,7 @@
   justify-content: space-between;
   align-items: center;
   border-bottom: 2px solid var(--secondary);
+  padding: 0 25px;
 }
 
 .user {
@@ -42,8 +43,9 @@
   width: 100%;
   height: 81%;
   display: flex;
-  flex-direction: column-reverse;
+  flex-direction: column;
   padding: 0 20px;
+  padding: 0 25px;
 }
 
 .textForm {
@@ -52,6 +54,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  padding: 0 25px;
 }
 
 .textField {
