--- a/client/src/components/Navbar/Navbar.module.css
+++ b/client/src/components/Navbar/Navbar.module.css
@@ -1,13 +1,15 @@
 .navbar {
   position: relative;
   background: var(--main);
-  width: 100%;
-  height: 70px;
+  border-bottom: 2px solid var(--secondary);
+}
+
+.navbarInner {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  border-bottom: 2px solid var(--secondary);
-  padding: 0 25px;
+  width: 100%;
+  height: 68px;
 }
 
 .menu {
