--- a/client/src/assets/styles/common.css
+++ b/client/src/assets/styles/common.css
@@ -58,8 +58,5 @@ a {
 ::-webkit-scrollbar-thumb {
   border-radius: 5px;
   box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
-  background-color: var(--main);
-}
-::-webkit-scrollbar-thumb:hover {
-  background-color: var(--light-main);
+  background-color: #a7a4a4;
 }
