--- a/client/src/components/Search/Search.module.css
+++ b/client/src/components/Search/Search.module.css
@@ -1,11 +1,37 @@
-.search {
+.form {
   position: relative;
   width: 100%;
+  display: flex;
+  justify-content: center;
+}
+
+.input {
   background: var(--main);
-  border-radius: 10px;
+  border-top-left-radius: 10px;
+  border-bottom-left-radius: 10px;
   color: var(--font);
-  padding: 7px;
+  padding: 5px 7px;
   font-size: 16px;
   border: 1px solid var(--secondary);
   outline: none;
+}
+
+.button {
+  padding: 5px 7px;
+  border: none;
+  outline: none;
+  font-size: 30px;
+  color: var(--font);
+  background: var(--secondary);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-top-right-radius: 10px;
+  border-bottom-right-radius: 10px;
+  cursor: pointer;
+}
+
+.button:disabled {
+  opacity: 0.6;
+  cursor: default;
 }
