--- a/client/src/components/ChatStarter/ChatStarter.module.css
+++ b/client/src/components/ChatStarter/ChatStarter.module.css
@@ -2,16 +2,17 @@
   width: 74%;
   height: 100%;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   background: #fff;
   color: var(--main);
 }
 
-.logo {
-  border: 2px solid var(--secondary);
-  margin-left: 5px;
-  background: var(--main);
-  padding: 12px;
-  border-radius: 10px;
+.icon {
+  font-size: 54px;
+}
+
+.subtitle {
+  opacity: 0.6;
 }
