Added socket io functionality for last message update and new conversation update in real time

--- a/client/src/components/ConversationsDrawer/ConversationsDrawer.module.css
+++ b/client/src/components/ConversationsDrawer/ConversationsDrawer.module.css
@@ -73,6 +73,12 @@
   align-items: center;
 }
 
+.searchInfo {
+  display: flex;
+  gap: 10px;
+  font-weight: 700;
+}
+
 .input {
   width: 20vw;
   background: var(--main);
