--- a/client/src/assets/styles/common.css
+++ b/client/src/assets/styles/common.css
@@ -46,15 +46,16 @@ a {
 
 ::-webkit-scrollbar-track {
   box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
-  background-color: #f5f5f5;
+  background-color: transparent;
 }
 
 ::-webkit-scrollbar {
   width: 7px;
-  background-color: #f5f5f5;
+  background-color: transparent;
 }
 
 ::-webkit-scrollbar-thumb {
   box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
   background-color: #a7a4a4;
+  border-radius: 5px;
 }
