--- a/client/src/containers/EmojiMenu/EmojiMenu.module.css
+++ b/client/src/containers/EmojiMenu/EmojiMenu.module.css
@@ -17,10 +17,13 @@
   padding: 9px;
   -webkit-box-shadow: 0px 0px 15px 1px rgba(0, 0, 0, 0.67);
   box-shadow: 0px 0px 15px 1px rgba(0, 0, 0, 0.67);
+  border-radius: 5px;
+  pointer-events: all;
 }
 
 .emojisListHide {
   opacity: 0;
+  pointer-events: none;
 }
 
 .emoji {
